--- a/index.html
+++ b/index.html
@@ -8,40 +8,53 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="container">
-      <div class="home-card">
-        <h1>Hello, I'm Jacek (Yatsek)</h1>
-        <hr>
-        <img src="images/jacek_profile.jpg" width="100px" alt="Jacek Jan Nowak">
-        <p>
-          Aspiring Programmer, RIBA ARB MArch Part 2 Architect and BEng Civil Engineer
-        </p>
-        <p>
-          Passion for architecture. Interested in people-centric design through introduction of wellbeing, sustainability as well as high quality, considered design.
-        </p>
-        <hr>
-        <a href="https://issuu.com/jacekjannowak/docs/academic_portfolio" target="_blank">Discover my portfolio</a>
+    <div class="parallax_container">
+      <div class="parallax background" ><img src="images/background/background_0.png" alt=""></div>
+      <div class="parallax sky_1" ><img src="images/background/sky_1.svg" alt=""></div>
+      <div class="parallax moon_2"><img src="images/background/moon_2.png" alt=""></div>
+      <div class="parallax clouds_3"><img src="images/background/clouds_3.png" alt=""></div>
+      <div class="parallax birds_4"><img src="images/background/birds_4.svg" alt=""></div>
+      <div class="parallax trees_inside_5"><img src="images/background/trees_inside_5.svg" alt=""></div>
+      <div class="parallax trees_inside_6"><img src="images/background/trees_inside_6.png" alt=""></div>
+      <div class="parallax profile_cover_7"><img src="images/background/profile_cover_7.svg" alt=""></div>
+      <div class="parallax trees_outside_8"><img src="images/background/trees_outside_8.png" alt=""></div>
+      <div class="parallax trees_outside_9"><img src="images/background/trees_outside_9b.svg" alt=""></div>
+      <div class="parallax profile_10"><img src="images/background/profile_10.png" alt=""></div>
+      <div class="container">
+        <div class="home-card">
+          <h1>Hello, I'm Jacek (Yatsek)</h1>
+          <h2>Not Jacket for love of God!</h2>
+          <hr>
+          <img src="images/jacek_profile.jpg" width="100px" alt="Jacek Jan Nowak">
+          <p>
+            Aspiring Programmer, RIBA ARB MArch Part 2 Architect and BEng Civil Engineer
+          </p>
+          <p>
+            Passion for architecture. Interested in people-centric design through introduction of wellbeing, sustainability as well as high quality, considered design.
+          </p>
+          <hr>
+          <a href="https://issuu.com/jacekjannowak/docs/academic_portfolio" target="_blank">Discover my portfolio</a>
+        </div>
+        <div class="home-card">
+          <h2>Follow me</h2>
+          <ul>
+            <li>
+              <a href="https://github.com/Jacek-Jan-Nowak/" target="_blank" class="btn">
+                <i class="fab fa-github-square"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://www.facebook.com/jacek.nowak.712" target="_blank" class="btn">
+                <i class="fab fa-facebook-square"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://www.linkedin.com/in/jacek-jan-nowak/" target="_blank" class="btn">
+                <i class="fab fa-linkedin"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
-      <div class="home-card">
-        <h2>Follow me</h2>
-        <ul>
-          <li>
-            <a href="https://github.com/Jacek-Jan-Nowak/" target="_blank" class="btn">
-              <i class="fab fa-github-square"></i>
-            </a>
-          </li>
-          <li>
-            <a href="https://www.facebook.com/jacek.nowak.712" target="_blank" class="btn">
-              <i class="fab fa-facebook-square"></i>
-            </a>
-          </li>
-          <li>
-            <a href="https://www.linkedin.com/in/jacek-jan-nowak/" target="_blank" class="btn">
-              <i class="fab fa-linkedin"></i>
-            </a>
-          </li>
-        </ul>
-      </div>
-    </div>
   </body>
 </html>
