--- a/index.html
+++ b/index.html
@@ -20,12 +20,16 @@
       <div class="parallax trees_outside_8"><img src="images/background/trees_outside_8.png" alt=""></div>
       <div class="parallax trees_outside_9"><img src="images/background/trees_outside_9b.svg" alt=""></div>
       <div class="parallax profile_10"><img src="images/background/profile_10.png" alt=""></div>
+      <div class="parallax hi">  
+        <hr>        
+        <h1>Hello, I'm Jacek (Yatsek)</h1>
+        <h2>Not Jacket for the love of God!</h2>
+      </div>
       <div class="container">
         <div class="home-card">
-          <h1>Hello, I'm Jacek (Yatsek)</h1>
-          <h2>Not Jacket for love of God!</h2>
+          <img class="avatar" src="images/avatar.png" width="150px" alt="Jacek Jan Nowak">
+          <h2>Jacek Jan Nowak</h2>
           <hr>
-          <img src="images/jacek_profile.jpg" width="100px" alt="Jacek Jan Nowak">
           <p>
             Aspiring Programmer, RIBA ARB MArch Part 2 Architect and BEng Civil Engineer
           </p>
