--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="parallax hi">  
         <hr>        
         <h1>Hello, I'm Jacek (Yatsek)</h1>
-        <h2>Not Jacket for the love of God!</h2>
+        <h2>Not Jacket!</h2>
       </div>
       <div class="container">
         <div class="home-card">
