--- a/index.html
+++ b/index.html
@@ -37,6 +37,26 @@
             Passion for architecture. Interested in people-centric design through introduction of wellbeing, sustainability as well as high quality, considered design.
           </p>
           <hr>
+        </div>
+        <div class="home-card card-card">
+          <h2>I like to:</h2>
+          <div class="card">
+            <img class="icon" src="images/sailboat.png" alt="sailboat">
+            <hr>
+            <h3>Sailing</h3>
+          </div>
+          <div class="card">
+            <img class="icon" src="images/artist-tools.png" alt="artist-tools">
+            <hr>
+            <h3>Painting</h3>
+          </div>
+          <div class="card">
+            <img class="icon" src="images/game-pad.png" alt="game-pad">
+            <hr>
+            <h3>Computer games</h3>
+          </div>
+        </div>
+        <div class="home-card">
           <a href="https://issuu.com/jacekjannowak/docs/academic_portfolio" target="_blank">Discover my portfolio</a>
         </div>
         <div class="home-card">
