--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           </div>
         </div>
         <div class="home-card">
-          <a href="https://issuu.com/jacekjannowak/docs/academic_portfolio" target="_blank">Discover my portfolio</a>
+          <a class="btn" href="https://issuu.com/jacekjannowak/docs/academic_portfolio" target="_blank">Discover my portfolio</a>
         </div>
         <div class="home-card">
           <h2>Follow me</h2>
