--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
           <h2>Jacek Jan Nowak</h2>
           <hr>
           <p>
-            Aspiring Programmer, RIBA ARB MArch Part 2 Architect and BEng Civil Engineer
+            Architect with passion for all things like big data, parametric and generative design.
           </p>
           <p>
-            Passion for architecture. Interested in people-centric design through introduction of wellbeing, sustainability as well as high quality, considered design.
+            I’m literally into everything – from painting, sailing, through games, reading up to collecting lots of unnecessary knowledge and fun facts.
           </p>
           <hr>
         </div>
