--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
   <body>
     <div class="parallax_container">
       <div class="parallax background" ><img src="images/background/background_0.png" alt=""></div>
-      <div class="parallax sky_1" ><img src="images/background/sky_1.svg" alt=""></div>
+      <div class="parallax sky_1" ><img src="images/background/sky_1.png" alt=""></div>
       <div class="parallax moon_2"><img src="images/background/moon_2.png" alt=""></div>
       <div class="parallax clouds_3"><img src="images/background/clouds_3.png" alt=""></div>
-      <div class="parallax birds_4"><img src="images/background/birds_4.svg" alt=""></div>
-      <div class="parallax trees_inside_5"><img src="images/background/trees_inside_5.svg" alt=""></div>
+      <div class="parallax birds_4"><img src="images/background/birds_4.png" alt=""></div>
+      <div class="parallax trees_inside_5"><img src="images/background/trees_inside_5.png" alt=""></div>
       <div class="parallax trees_inside_6"><img src="images/background/trees_inside_6.png" alt=""></div>
-      <div class="parallax profile_cover_7"><img src="images/background/profile_cover_7.svg" alt=""></div>
+      <div class="parallax profile_cover_7"><img src="images/background/profile_cover_7.png" alt=""></div>
       <div class="parallax trees_outside_8"><img src="images/background/trees_outside_8.png" alt=""></div>
-      <div class="parallax trees_outside_9"><img src="images/background/trees_outside_9b.svg" alt=""></div>
+      <div class="parallax trees_outside_9"><img src="images/background/trees_outside_9b.png" alt=""></div>
       <div class="parallax profile_10"><img src="images/background/profile_10.png" alt=""></div>
       <div class="parallax hi">  
         <hr>        
@@ -56,10 +56,10 @@
             <h3>Computer games</h3>
           </div>
         </div>
-        <div class="home-card">
-          <a class="btn" href="https://issuu.com/jacekjannowak/docs/academic_portfolio" target="_blank">Discover my portfolio</a>
+        <div class="home-card portfolio">
+          <a class="btn portfolio" href="https://issuu.com/jacekjannowak/docs/academic_portfolio" target="_blank">Discover my portfolio</a>
         </div>
-        <div class="home-card">
+        <div class="home-card icons">
           <h2>Follow me</h2>
           <ul>
             <li>
