--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
       <div class="parallax trees_outside_8"><img src="images/background/trees_outside_8.png" alt=""></div>
       <div class="parallax trees_outside_9"><img src="images/background/trees_outside_9b.png" alt=""></div>
       <div class="parallax profile_10"><img src="images/background/profile_10.png" alt=""></div>
-      <div class="parallax hi">  
-        <hr>        
+      <div class="parallax hi">         
         <h1>Hello, I'm Jacek (Yatsek)</h1>
         <h2>Not Jacket!</h2>
       </div>
@@ -39,7 +38,7 @@
           <hr>
         </div>
         <div class="home-card card-card">
-          <h2>I like to:</h2>
+          <h2>I like:</h2>
           <div class="card">
             <img class="icon" src="images/sailboat.png" alt="sailboat">
             <hr>
